[gd_scene load_steps=41 format=3 uid="uid://crsrsc5dlcqhk"]

[ext_resource type="PackedScene" uid="uid://kn6ykqolgoae" path="res://Players/cat_player.tscn" id="1_u52ul"]
[ext_resource type="ArrayMesh" uid="uid://ciup1syk8xov3" path="res://assets/room/furniture/kitchen_table.obj" id="2_i2t4f"]
[ext_resource type="ArrayMesh" uid="uid://b23mnsyc4m0n5" path="res://assets/room/furniture/kitchen_chair.obj" id="3_8cye3"]
[ext_resource type="Script" uid="uid://dn6h4fsb604cj" path="res://Players/players_manager.gd" id="3_f2txt"]
[ext_resource type="Script" uid="uid://d26102pwa3s8h" path="res://Environment/environment.gd" id="3_oi3di"]
[ext_resource type="PackedScene" uid="uid://b3noddpnpt7l4" path="res://Players/human_player.tscn" id="5_1ainy"]
[ext_resource type="Script" uid="uid://2sw6sflq1lsu" path="res://Players/human_player.gd" id="6_1ainy"]
[ext_resource type="ArrayMesh" uid="uid://dqohync2u3lgc" path="res://assets/room/furniture/kitchen.obj" id="7_n6hdu"]
[ext_resource type="Script" uid="uid://caa0bhxx8ediv" path="res://Players/player_base.gd" id="9_h6smj"]
[ext_resource type="ArrayMesh" uid="uid://6v65rbcxi07h" path="res://assets/room/furniture/bed.obj" id="10_2orkt"]
[ext_resource type="Shader" uid="uid://d25jt0crt7nne" path="res://Shaders/level.gdshader" id="11_8b0r0"]
[ext_resource type="ArrayMesh" uid="uid://bibx13pcbsc0b" path="res://assets/room/furniture/small_sofa.obj" id="11_aicyk"]
[ext_resource type="Script" uid="uid://c6f15r3jqfvdi" path="res://UI/color_rect.gd" id="12_h6smj"]
[ext_resource type="Shader" uid="uid://bv85t8ibtim5v" path="res://Shaders/dithering.gdshader" id="13_8b0r0"]
[ext_resource type="Script" uid="uid://mktm8rbglfb4" path="res://UI/window.gd" id="15_5pxul"]
[ext_resource type="Script" uid="uid://dn2o3diy3qdh" path="res://UI/ui_manager.gd" id="16_4c15r"]
[ext_resource type="Shader" uid="uid://cowayx3xisbms" path="res://UI/loading.gdshader" id="16_fedht"]
[ext_resource type="Script" uid="uid://bwsq466e7dbe4" path="res://test_input.gd" id="18_42xju"]
[ext_resource type="Texture2D" uid="uid://ccwg1s36ue8hj" path="res://assets/ui/Untitled-1.png" id="18_v7sqt"]
[ext_resource type="Script" uid="uid://dil84ifrqcrf0" path="res://Scripts/game_state.gd" id="19_ait7k"]
[ext_resource type="Script" uid="uid://cpcykyaw6uod5" path="res://Scripts/input_manager.gd" id="20_42xju"]

[sub_resource type="BoxShape3D" id="BoxShape3D_u52ul"]
size = Vector3(7.96925, 4.09814, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_5xgho"]
size = Vector2(6, 7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vonw3"]
albedo_color = Color(0.3, 0.22895, 0.153, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_i2t4f"]
size = Vector3(6, 0.1, 7)

[sub_resource type="BoxShape3D" id="BoxShape3D_u3yai"]
size = Vector3(5.07239, 1, 0.684509)

[sub_resource type="BoxShape3D" id="BoxShape3D_fj6e6"]
size = Vector3(4.52698, 0.721405, 0.600586)

[sub_resource type="BoxShape3D" id="BoxShape3D_2h3vt"]
size = Vector3(0.966057, 3.03961, 0.537659)

[sub_resource type="BoxShape3D" id="BoxShape3D_42xju"]
size = Vector3(1.73133, 0.62674, 2.12863)

[sub_resource type="BoxShape3D" id="BoxShape3D_v7sqt"]
size = Vector3(0.15271, 0.529255, 0.695313)

[sub_resource type="BoxShape3D" id="BoxShape3D_ilwjd"]
size = Vector3(1.69244, 0.318481, 0.703857)

[sub_resource type="BoxShape3D" id="BoxShape3D_y3bce"]
size = Vector3(1.28876, 0.569336, 0.153046)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5xgho"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_oi3di"]
sky_material = SubResource("ProceduralSkyMaterial_5xgho")

[sub_resource type="Environment" id="Environment_vonw3"]
background_mode = 2
background_color = Color(0.00784314, 0.00784314, 0.0196078, 1)
sky = SubResource("Sky_oi3di")
ambient_light_source = 2
ambient_light_color = Color(0.798661, 0.466862, 0.591614, 1)
ambient_light_energy = 0.1
tonemap_mode = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v5j5c"]
shader = ExtResource("11_8b0r0")
shader_parameter/time = 0.0
shader_parameter/intensity = 0.01

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h6smj"]
shader = ExtResource("13_8b0r0")

[sub_resource type="FontFile" id="FontFile_8b0r0"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Theme" id="Theme_h6smj"]
default_font = SubResource("FontFile_8b0r0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_42xju"]
shader = ExtResource("16_fedht")
shader_parameter/time_scale = 1.0
shader_parameter/color = Vector4(1, 1, 1, 1)
shader_parameter/thickness = 0.6
shader_parameter/size = 0.95

[node name="game" type="Node3D"]

[node name="Room" type="Node3D" parent="."]

[node name="Walls" type="StaticBody3D" parent="Room"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.229954, 1.54907, 2.449)
shape = SubResource("BoxShape3D_u52ul")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Room/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0224934, 1.4687, -5.58002)
shape = SubResource("BoxShape3D_u52ul")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Room/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.56209, 1.68241, -1.46594)
shape = SubResource("BoxShape3D_u52ul")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Room/Walls"]
transform = Transform3D(0.0150615, 0, 0.999887, 0, 1, 0, -0.999887, 0, 0.0150615, -3.57618, 1.37676, -1.39269)
shape = SubResource("BoxShape3D_u52ul")

[node name="Floor" type="StaticBody3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5954)

[node name="Floor" type="MeshInstance3D" parent="Room/Floor"]
mesh = SubResource("PlaneMesh_5xgho")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_vonw3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0463306, 0)
shape = SubResource("BoxShape3D_i2t4f")

[node name="Furniture" type="Node3D" parent="Room"]

[node name="KitchenTable" type="MeshInstance3D" parent="Room/Furniture"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.402424, 0.00366959, -5.09355)
mesh = ExtResource("2_i2t4f")
skeleton = NodePath("../../..")

[node name="KitchenChair" type="MeshInstance3D" parent="Room/Furniture"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.828682, 0.00366959, -4.2904)
mesh = ExtResource("3_8cye3")
skeleton = NodePath("../../..")

[node name="KitchenChair2" type="MeshInstance3D" parent="Room/Furniture"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -0.805034, 0.00733918, -4.71111)
mesh = ExtResource("3_8cye3")
skeleton = NodePath("../KitchenChair")

[node name="Kitchen" type="MeshInstance3D" parent="Room/Furniture"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.34539, 0, -0.613325)
mesh = ExtResource("7_n6hdu")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Furniture/Kitchen"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Furniture/Kitchen/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.03619, 0.330098, -0.314056)
shape = SubResource("BoxShape3D_u3yai")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Room/Furniture/Kitchen/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2593, 2.19023, -0.338376)
shape = SubResource("BoxShape3D_fj6e6")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Room/Furniture/Kitchen/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.481464, 1.01981, -0.231171)
shape = SubResource("BoxShape3D_2h3vt")

[node name="Bed" type="MeshInstance3D" parent="Room/Furniture"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.75343, 0, 1.86696)
mesh = ExtResource("10_2orkt")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Furniture/Bed"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Furniture/Bed/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.851501, 0.313004, -1.13429)
shape = SubResource("BoxShape3D_42xju")

[node name="SmallSofa" type="MeshInstance3D" parent="Room/Furniture"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.97832, 0.00366959, -0.613328)
mesh = ExtResource("11_aicyk")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Furniture/SmallSofa"]

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Room/Furniture/SmallSofa/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60488, 0.418511, -0.382505)
shape = SubResource("BoxShape3D_v7sqt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Furniture/SmallSofa/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.852337, 0.262268, -0.369019)
shape = SubResource("BoxShape3D_ilwjd")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Room/Furniture/SmallSofa/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0964966, 0.384234, -0.365234)
shape = SubResource("BoxShape3D_v7sqt")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Room/Furniture/SmallSofa/StaticBody3D"]
transform = Transform3D(1, -8.2896e-09, 7.93232e-10, 8.2896e-09, 0.981853, -0.189644, 7.93232e-10, 0.189644, 0.981853, 0.771067, 0.481158, -0.127413)
shape = SubResource("BoxShape3D_y3bce")

[node name="Environment" type="Node3D" parent="."]
script = ExtResource("3_oi3di")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_vonw3")

[node name="Sun" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_color = Color(1, 0.94297, 0.921578, 1)
shadow_enabled = true

[node name="Moon" type="DirectionalLight3D" parent="Environment"]
light_color = Color(0.537574, 0.606158, 0.924448, 1)
shadow_enabled = true
shadow_bias = 0.5
shadow_opacity = 0.5
shadow_blur = 2.796

[node name="Players" type="Node3D" parent="."]
script = ExtResource("3_f2txt")

[node name="cat_player" parent="Players" instance=ExtResource("1_u52ul")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.501)
top_level = true
slide_on_ceiling = false

[node name="human_player" parent="Players" instance=ExtResource("5_1ainy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.53698, 0, 1.52267)
script = ExtResource("6_1ainy")

[node name="player_base" type="CharacterBody3D" parent="Players"]
script = ExtResource("9_h6smj")

[node name="view_shaders" type="CanvasLayer" parent="."]

[node name="human_shader" type="ColorRect" parent="view_shaders"]
material = SubResource("ShaderMaterial_v5j5c")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(1, 1, 1, 0)
script = ExtResource("12_h6smj")

[node name="ColorRect" type="ColorRect" parent="view_shaders"]
material = SubResource("ShaderMaterial_h6smj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(1, 1, 1, 0.011)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("16_4c15r")

[node name="Window" type="Window" parent="UI"]
transparent_bg = true
initial_position = 4
unresizable = true
transparent = true
popup_window = true
theme = SubResource("Theme_h6smj")
script = ExtResource("15_5pxul")

[node name="SleepButton" type="Button" parent="UI/Window"]
offset_left = 22.0
offset_top = -3.0
offset_right = 77.0
offset_bottom = 28.0
text = "Sleep."
flat = true

[node name="Load_Icon" type="TextureRect" parent="UI/Window"]
material = SubResource("ShaderMaterial_42xju")
custom_minimum_size = Vector2(64, 64)
anchors_preset = -1
anchor_left = 0.52
anchor_top = 0.61
anchor_right = 0.52
anchor_bottom = 0.61
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_v7sqt")

[node name="Scripts" type="Node" parent="."]
script = ExtResource("18_42xju")

[node name="GameState" type="Node" parent="Scripts"]
script = ExtResource("19_ait7k")

[node name="Systems" type="Node" parent="Scripts"]

[node name="TimeSystem" type="Node" parent="Scripts/Systems"]

[node name="ShaderController" type="Node" parent="Scripts/Systems"]

[node name="InputManager" type="Node3D" parent="Scripts"]
script = ExtResource("20_42xju")

[node name="Scenes" type="Node" parent="."]

[node name="Main" type="Node" parent="Scenes"]
